  - CHANGE: Refactor the generation of mact urls.
  - CHANGE: Now, by default, when pretty urls are not enabled... generate a signed, encoded LONGER request that is forgery resistant.
  - CHANGE: New config entries to enable generation of old style mact URLs, and to allow processing of old style mact urls.

News2 v1.0
  - New core module that is similar to, but not directly compatible with News.

CMSContentManager - 1.2
  - REMOVED: Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.
  - FEATURE: Adds expand/functionality into reorder content (TODO: needs styling)
  - FEATURE: Adds new 'add child here' icon in the content list.
  - FEATURE: Find functionality in content list can now search on page alias and url.
  - FEATURE: Allow setting the default content page from within the page edit form (for pages where it is possible, and permission allows)
  - FEATURE: New bulk action for when page_template_list is correctly defined in the config to allow setting bulk pages to a template resource.
  - FEATURE: When page_template_list is defined hide the set design and template bulk action

Installation Assistant - v1.4
  - Now require at least version 2.0.1 to upgrade
  - Now test the default character set
  - Now require at least PHP 7.0 and recommend 7.1
  - Upgrade to smarty v3.1.32
  - CURL is now a requirement
  - ZipArchive is now a requirement (at least for the installer)
  - no longer change the config file on upgrade.  Though we will for install and freshen.
  - Now install default theme from a zip file into the /assets/simplex directory (hardcoded)
  - Now install default content from an XML file exported by CGCU
  - The basic installer no longer emails the admin account information
  - Now write the primary contact email address to the config.php

ModuleManaver v2.2