@@ -72,6 +72,8 @@ $lang['allow_browser_cache'] = "Allow Browser to Cache Pages";
 $lang['allpagesmodified'] = "All pages modified!";
 $lang['all_groups'] = "All Groups";
 $lang['always'] = "Always";
+$lang['apc_function'] = 'Test if APC caching functionality is available';
+$lang['apc_not_available'] = 'APC Functionality not available';
 $lang['applied'] = 'Applied';
 $lang['apply'] = "Apply";
 $lang['applydescription'] = "Save changes and continue to edit";
