@@ -275,17 +275,18 @@ final class cms_utils
      */
     public static function get_real_ip()
     {
-        $ip = $_SERVER['REMOTE_ADDR'];
+        $ip = null;
+        if (isset($_SERVER['REMOTE_ADDR']) && !empty($_SERVER['REMOTE_ADDR'])) {
+            $ip = $_SERVER['REMOTE_ADDR'];
+        }
         if (empty($ip) && !empty($_SERVER['HTTP_CLIENT_IP'])) {
             $ip = $_SERVER['HTTP_CLIENT_IP'];
         }
-        elseif (empty($ip) && !empty($_SERVER['HTTP_X_FORWARDED_FOR'])) {
+        if (empty($ip) && !empty($_SERVER['HTTP_X_FORWARDED_FOR'])) {
             $ip = $_SERVER['HTTP_X_FORWARDED_FOR'];
         }
-
-        if( filter_var($ip,FILTER_VALIDATE_IP) ) return $ip;
-
-        return null;
+        if( $ip ) $ip = filter_var($ip, FILTER_VALIDATE_IP);
+        return $ip;
     }
 
     /**
