@@ -168,6 +168,9 @@ Core - General
   - CHANGE: Refactor the generation of mact urls.
   - CHANGE: Now, by default, when pretty urls are not enabled... generate a signed, encoded LONGER request that is forgery resistant.
   - CHANGE: New config entries to enable generation of old style mact URLs, and to allow processing of old style mact urls.
+  - CHANGE: Add and remove some tests from the systeminfo page.
+  - CHANGE: Minor improvements to the test functions
+  - CHANGE: Improvements to the is_sitedown() stuff, and the get_real_ip() function.
 
 News2 v1.0
   - New core module that is similar to, but not directly compatible with News.
